--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
     ],
     "paths": {
       "@/*": [
-        "src/*"
-      ]
+        "./src/*"
+      ],
     },
     "lib": [
       "esnext",
