--- a/package.json
+++ b/package.json
@@ -7,12 +7,28 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+
   "dependencies": {
+    "@progress/kendo-data-query": "^1.7.0",
+    "@progress/kendo-drawing": "^1.20.1",
+    "@progress/kendo-licensing": "^1.3.5",
+    "@progress/kendo-svg-icons": "^3.0.0",
+    "@progress/kendo-theme-default": "^8.0.1",
+    "@progress/kendo-vue-animation": "^5.1.0",
+    "@progress/kendo-vue-data-tools": "^5.1.0",
+    "@progress/kendo-vue-dateinputs": "^5.1.0",
+    "@progress/kendo-vue-dialogs": "^5.1.0",
+    "@progress/kendo-vue-dropdowns": "^5.1.0",
+    "@progress/kendo-vue-grid": "^5.1.0",
+    "@progress/kendo-vue-indicators": "^5.1.0",
+    "@progress/kendo-vue-inputs": "^5.1.0",
+    "@progress/kendo-vue-intl": "^5.1.0",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -23,7 +39,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
